# formula-sigma

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  LICENSE-DATA.md  README.md  requirements.txt
03_data/processed/: README.md
04_experiments/: Makefile  README.md  pyproject.toml
04_experiments/common/: __init__.py  data_io.py  designs.py  manifest.py  models.py  optimisers.py  paths.py  pds.py  plotting.py  seeds.py
04_experiments/e01_cross_tool/: 01_ccd_correctness.py  02_bbd_correctness.py  03_scheffe_mixture.py  04_pbdesign.py  05_lhs_correctness.py  06_summary_table.py  07_full_factorial.py  08_fractional_factorial.py  09_d_optimal.py  10_model_zoo.py
04_experiments/e02_retrospective/: 99_summary_table.py
04_experiments/e02_retrospective/case1_sharma/: reproduce.py
04_experiments/e02_retrospective/case1b_akhtar/: reproduce.py
04_experiments/e02_retrospective/case2_arif/: reproduce.py
04_experiments/e02_retrospective/case3_boscolo/: reproduce.py
04_experiments/e02_retrospective/case4_nemr/: reproduce.py
04_experiments/e03_synthetic/bo/: run_bo_benchmarks.py
04_experiments/e03_synthetic/pareto/: run_zdt1.py
04_experiments/e03_synthetic/pds/: run_pds_recovery.py
04_experiments/e03_synthetic/robust/: run_robust_recovery.py
04_experiments/e04_reproducibility/: compute_hashes.py  expected_hashes.txt  make_paper.sh  verify_hashes.py
04_experiments/figures/: build_main_figures.py  build_prisma_figure.py  build_sharma_anomaly_figure.py
04_experiments/tests/: test_designs.py  test_models.py  test_smoke.py
05_results/e01/: e01_01_ccd.csv  (+18 more)
(+109 files in other folders)
